--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 fastapi==0.115.0
 uvicorn[standard]==0.30.6
 pydantic==2.9.2
-numpy>=1.26
-pandas>=2.2
-tensorflow
-joblib
-requests
+numpy==1.25.2
+pandas==2.1.1
+tensorflow==2.13.0
+joblib==1.3.2
+requests==2.32.0
