--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 fastapi==0.115.0
 uvicorn[standard]==0.30.6
 pydantic==2.9.2
-pandas==2.1.1
+pandas==2.0.3      # 改成 Render 支援的最新版本
 joblib==1.3.2
 requests==2.32.0
