--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-flask==2.3.2
-gunicorn==21.2.0
-tensorflow==2.12.0
-numpy==1.24.4
-pandas==1.5.3
-scikit-learn==1.2.2
-matplotlib==3.7.1
-seaborn==0.12.2
-joblib==1.3.2
+fastapi==0.115.0
+uvicorn[standard]==0.30.6
+pydantic==2.9.2
+numpy>=1.26
+pandas>=2.2
+# 若要使用真 LSTM 權重，請取消下一行註解（Render 會稍久）：
+# tensorflow-cpu==2.15.0
