--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-fastapi
-uvicorn[standard]
-pydantic
-numpy
-scikit-learn
-pandas
-yfinance
+fastapi==0.111.0
+uvicorn[standard]==0.24.0
+pandas==2.1.1
+numpy==1.25.2
+scikit-learn==1.3.1
+tensorflow==2.13.0
+keras==2.13.1
+yfinance==0.2.27
