--- a/.render.yaml
+++ b/.render.yaml
@@ -1,8 +1,11 @@
+# render.yaml
 services:
   - type: web
     name: forecast-lite0
     env: python
-    plan: free
     pythonVersion: "3.11"
-    buildCommand: "python -m pip install --upgrade pip setuptools wheel && pip install -r requirements.txt"
+    buildCommand: >
+      python3 -m pip install --upgrade pip setuptools wheel &&
+      rm -rf .venv __pycache__ build dist *.egg-info &&
+      python3 -m pip install -r requirements.txt
     startCommand: "uvicorn main:app --host 0.0.0.0 --port $PORT"
