--- a/.render.yaml
+++ b/.render.yaml
@@ -1,18 +1,11 @@
+# render.yaml
 services:
   - type: web
     name: forecast-lite0
     env: python
-    pythonVersion: "3.11"
+    pythonVersion: "3.11.4"  # 使用 Render 支援且穩定的 Python 版本
     buildCommand: >
       python3 -m pip install --upgrade pip setuptools wheel &&
-      python3 -c "
-import shutil, glob, os
-# 刪除舊虛擬環境與 build 產物
-for path in ['.venv', '__pycache__', 'build', 'dist']:
-    shutil.rmtree(path, ignore_errors=True)
-# 刪除 egg-info
-for f in glob.glob('*.egg-info'):
-    shutil.rmtree(f, ignore_errors=True)
-" &&
-      python3 -m pip install --no-cache-dir -r requirements.txt
+      rm -rf .venv __pycache__ build dist *.egg-info &&
+      python3 -m pip install -r requirements.txt
     startCommand: "uvicorn main:app --host 0.0.0.0 --port $PORT"
