--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 fastapi==0.111.0
-uvicorn[standard]==0.24.0
+uvicorn==0.24.0
 pandas==2.0.3
-numpy==1.25.2
-scikit-learn==1.3.1
-tensorflow==2.13.0
-keras==2.13.1
-yfinance==0.2.27
+numpy==1.24.4
+scikit-learn==1.3.2
+matplotlib==3.8.0
+python-dotenv==1.0.0
