--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
 fastapi==0.111.0
-uvicorn==0.24.0
+uvicorn[standard]==0.24.0
 pandas==2.0.3
-numpy==1.24.4
-scikit-learn==1.3.2
-matplotlib==3.8.0
-python-dotenv==1.0.0
+numpy==1.25.2
