--- a/.render.yaml
+++ b/.render.yaml
@@ -1,7 +1,7 @@
 services:
   - type: web
     name: forecast-lite0
-    env: docker
-    dockerfilePath: ./Dockerfile
-    # Render 會自動 build Dockerfile，無需額外 Build Command
+    env: python
+    pythonVersion: "3.11.4"
+    buildCommand: "python3 -m pip install --upgrade pip setuptools wheel && python3 -m pip install --no-cache-dir -r requirements.txt"
     startCommand: "uvicorn main:app --host 0.0.0.0 --port $PORT"
