--- a/.render.yaml
+++ b/.render.yaml
@@ -3,5 +3,7 @@ services:
     name: forecast-lite0
     env: python
     pythonVersion: "3.11.4"
-    buildCommand: "python3 -m pip install --upgrade pip setuptools wheel && python3 -m pip install --no-cache-dir -r requirements.txt"
+    buildCommand: >
+      python3 -m pip install --upgrade pip setuptools wheel &&
+      python3 -m pip install --no-cache-dir -r requirements.txt
     startCommand: "uvicorn main:app --host 0.0.0.0 --port $PORT"
