--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-fastapi==0.111.0
-uvicorn[standard]==0.24.0
+fastapi==0.103.0
+uvicorn[standard]==0.23.1
 numpy==1.25.2
-pandas==2.0.3
-tensorflow==2.14.0
-yfinance==0.2.37
+pandas==2.1.1
+tensorflow==2.13.1
+yfinance==0.2.33
+scikit-learn==1.3.2
