--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-fastapi==0.103.0
-uvicorn[standard]==0.23.1
-numpy==1.25.2
-pandas==2.1.1
 tensorflow==2.7.0
-yfinance==0.2.33
-scikit-learn==1.3.2
+numpy==1.21.6
+pandas
+scikit-learn
+yfinance
+flask
+uvicorn
+fastapi
