--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,20 @@
+# TensorFlow 與對應 numpy
 tensorflow==2.7.0
 numpy==1.21.6
-pandas
-scikit-learn
-yfinance
-flask
-uvicorn
-fastapi
+
+# 資料處理
+pandas==1.5.3
+scikit-learn==1.2.2
+
+# 即時股市/外匯資料抓取
+yfinance==0.2.27
+
+# Web API
+fastapi==0.108.0
+uvicorn==0.24.0
+flask==2.3.4
+
+# 其他常用套件
+python-dateutil==2.8.2
+pytz==2025.7
+requests==2.31.0
