--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,18 @@
-# TensorFlow 與對應 numpy
+# TensorFlow 與 numpy 相容
 tensorflow==2.13.1
-numpy>=1.22,<1.25
+numpy==1.24.4
 
 # 資料處理
 pandas==1.5.3
 scikit-learn==1.2.2
 
-# 即時股市/外匯資料抓取
+# 金融資料抓取
 yfinance==0.2.27
 
-# Web API
+# Web 框架
 fastapi==0.108.0
 uvicorn==0.24.0
 flask==2.3.4
 
 # 其他常用套件
-python-dateutil==2.8.2
-pytz==2025.7
-requests==2.31.0
+python-multipart==0.0.6
