--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,8 @@
-# TensorFlow 與 numpy 相容
 tensorflow==2.13.1
-numpy==1.24.4
-
-# 資料處理
+numpy==1.24.3
 pandas==1.5.3
 scikit-learn==1.2.2
-
-# 金融資料抓取
 yfinance==0.2.27
-
-# Web 框架
 fastapi==0.108.0
 uvicorn==0.24.0
-flask==2.3.4
-
-# 其他常用套件
-python-multipart==0.0.6
+flask>=2.3.0,<2.4
