--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 tensorflow==2.13.1
-numpy>=1.22,<1.24
+numpy<1.24,>=1.22
 pandas==1.5.3
 scikit-learn==1.2.2
 yfinance==0.2.27
-fastapi==0.105.0
+fastapi==0.104.0
 uvicorn==0.24.0
 flask>=2.3.0,<2.4
+typing-extensions<4.6.0
