--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,31 @@
-tensorflow==2.13.1
-numpy<1.24,>=1.22
+# TensorFlow 與 Keras
+tensorflow==2.12.0
+keras==2.12.0
+
+# 科學計算
+numpy>=1.22,<1.24
 pandas==1.5.3
 scikit-learn==1.2.2
+scipy>=1.8.0
+
+# 金融資料抓取
 yfinance==0.2.27
-fastapi==0.103.0
+lxml>=4.9.1
+beautifulsoup4>=4.11.1
+html5lib>=1.1
+multitasking>=0.0.7
+requests>=2.31
+frozendict>=2.3.4
+appdirs>=1.4.4
+
+# Web 框架
+fastapi==0.104.0
 uvicorn==0.24.0
-flask>=2.3.0,<2.4
+flask>=2.3.0,<2.4.0
+
+# 工具
+python-dateutil>=2.8.1
+pytz>=2020.1
+typing-extensions>=4.5.0,<4.6.0
+joblib>=1.1.1
+threadpoolctl>=3.0.0
