--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,6 @@
-# TensorFlow CPU 版本
-tensorflow-cpu==2.12.0
-keras==2.12.0
-
-# 科學計算
-numpy>=1.22,<1.24
-pandas==1.5.3
-scipy>=1.8.0
-scikit-learn==1.2.2
-
-# 財經資料
-yfinance==0.2.27
-lxml>=4.9.1
-beautifulsoup4>=4.11.1
-html5lib>=1.1
-multitasking>=0.0.7
-requests>=2.31
-frozendict>=2.3.4
-appdirs>=1.4.4
-
-# Web 框架
-fastapi==0.104.0
-uvicorn==0.24.0
-flask>=2.3.0,<2.4.0
-
-# 版本相容依賴
-python-dateutil>=2.8.1
-pytz>=2020.1
-joblib>=1.1.1
-threadpoolctl>=3.0.0
-
-# 強制 typing-extensions 與 TensorFlow、FastAPI 相容
-typing-extensions>=4.5.0,<4.8.0
+yfinance==0.2.22
+pandas==2.1.1
+numpy==1.25.2
+scikit-learn==1.3.2
+tensorflow==2.15.0
+matplotlib==3.8.1
